[tool.poetry]
name = "repl-nix-linkedconnectbot-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_linkedconnectbot_1"}]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^69.2.0"
selenium = "^4.18.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
config = "^0.5.1"
html2text = "^2024.2.26"
openai = "^1.14.3"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
